--- a/css files/style5.css
+++ b/css files/style5.css
@@ -618,11 +618,6 @@ justify-content: center;}
 }
 
 
-
-
-
-
-
 .section-grid {
     display: flex;
     gap: 5px;
@@ -666,7 +661,20 @@ font-weight: 540;
 .car-hide{
     padding: 70px;
 }
-/*  */
+
 .bmws{
     padding-inline: 90px;
+}
+
+.media-box {
+    background-size: cover;
+    background-position: center;
+    transition: 0.5s ease;
+    width: 100%;
+    height: 350px;
+    background-image: url("../assets/image22.webp");
+
+}
+.shadow-ca-box{
+    padding-inline: 80px;
 }
